--- a/TimeTableManager/TimeTableManager.csproj
+++ b/TimeTableManager/TimeTableManager.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="NPOI" Version="2.4.1" />
     <PackageReference Include="OpenPop.NET" Version="2.0.6.1120" />
+    <PackageReference Include="SSH.NET" Version="2016.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MailService\" />
